--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">AR Figure</string>
     <string name="no_mesh">There is not mesh on devece :-(</string>
     <string name="mesh_list">Mesh list</string>
+    <string name="current_scale">Current scale: %s</string>
+    <string name="select_ar_type">Select AR type</string>
+    <string name="marker">Marker</string>
+    <string name="custom_surface">Instant Tracking AR</string>
+    <string name="select_ar_type_message">You can select type of AR</string>
     <!--<string name="metaioSDKSignature">jfyNFXmImfsYs1RJrXlhyUXNJ+9Gci0JuAbQ4yMu5OM=</string>-->
 </resources>
