--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="custom_surface">Instant Tracking AR</string>
     <string name="select_ar_type_message">You can select type of AR</string>
     <!--<string name="metaioSDKSignature">jfyNFXmImfsYs1RJrXlhyUXNJ+9Gci0JuAbQ4yMu5OM=</string>-->
+    <string name="web_quest">WebQuest</string>
 </resources>
